--- a/.drone.yml
+++ b/.drone.yml
@@ -17,3 +17,8 @@ steps:
   - cat README.md
   - envsubst < README.md | tee README.md
   - cat README.md
+  - RETRIES=0
+  - MAX_RETRIES=3
+  - until $RETRIES < $MAX_RETRIES; do $RETRIES+= 1; done
+  - if [RETRIES == MAX_RETRIES]; then >&2 echo 'Error: Max retries exceeded for az login. Please try again.' fi
+
