--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,6 @@ steps:
   commands:
   - RETRIES=0
   - MAX_RETRIES=3
-  - until $RETRIES < $MAX_RETRIES; do $RETRIES+= 1; done
+  - until $RETRIES < $MAX_RETRIES; do let $RETRIES=$RETRIES+1; done
   - if [RETRIES == MAX_RETRIES]; then echo "Error" fi
 
