--- a/.drone.yml
+++ b/.drone.yml
@@ -11,8 +11,8 @@ steps:
     SECRET_VARIABLE:
     from_secret: mysecretvar
   commands:
-  - RETRIES=0
-  - MAX_RETRIES=2
+  - export RETRIES=0
+  - export MAX_RETRIES=2
   - until $RETRIES < $MAX_RETRIES; do let $RETRIES=$RETRIES+1; done
   - if [RETRIES == MAX_RETRIES]; then echo "Error" fi
 
