--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,6 @@ steps:
     from_secret: mysecretvar
   commands:
   - export RETRIES=0
-  - until $RETRIES < 2; do let $RETRIES=$RETRIES+1; done
+  - until $RETRIES < 2; do $RETRIES=$RETRIES+1; done
   - if [RETRIES == MAX_RETRIES]; then echo "Error" fi
 
