--- a/.drone.yml
+++ b/.drone.yml
@@ -12,5 +12,5 @@ steps:
     from_secret: mysecretvar
   commands:
   - RETRIES=0
-  - until "$RETRIES" -ge 3; do RETRIES=$((RETRIES+1)); done
+  - until ["$RETRIES" -ge 3]; do RETRIES=$((RETRIES+1)); done
   - echo $RETRIES
