--- a/.drone.yml
+++ b/.drone.yml
@@ -14,6 +14,4 @@ steps:
     <<: *drone_vars
     RETRIES: 0
   commands:
-  - echo $REG_VARIABLE
-  - echo $SECRET_VARIABLE
-  - echo $RETRIES
+  - mapfile -t myArray < file.txt
