--- a/.drone.yml
+++ b/.drone.yml
@@ -14,4 +14,4 @@ steps:
     <<: *drone_vars
     RETRIES: 0
   commands:
-  - readarray -t myArray < ./file.txt
+  - arr=(); while IFS= read -r line || [[ "$line" ]]; do arr+=("$line"); done < file.txt
