--- a/.drone.yml
+++ b/.drone.yml
@@ -14,4 +14,5 @@ steps:
     <<: *drone_vars
     RETRIES: 0
   commands:
-  - arr=(); while IFS= read -r line || [[ "$line" ]]; do arr+=("$line"); done < file.txt
+  - chmod +x ./test.sh
+  - ./test.sh
