--- a/.drone.yml
+++ b/.drone.yml
@@ -6,79 +6,11 @@ kind: pipeline
 name: test
 
 steps:
-  - name: fmt check
-    image: hashicorp/terraform:0.13.2
+  - name: check users
+    image: ubuntu:latest
     commands:
-      - terraform fmt -check
-
-  - name: lint
-    image: wata727/tflint
-    commands:
-      - tflint
+      - curl -H 'Authorization: token $gh-api' -H 'Accept: application/vnd.github.v3+json' https://api.github.com/repos/sawp-d/drone-demo/collaborators
 
 trigger:
   event:
   - push
-
----
-# Use this pipeline to run a plan and apply against Terraform Cloud.
-# This pipeline will plan during a PR to main, and apply at merge to main.
-# This pipeline assumes that a Terraform Cloud team token is in the Drone settings as TFE_TOKEN.
-kind: pipeline
-name: build monitoring
-
-globals:
-  - &tf_vars
-    TFE_TOKEN:
-      from_secret: TFE_TOKEN
-
-steps:
-  - name: plan
-    image: hashicorp/terraform:0.13.2
-    environment:
-      <<: *tf_vars
-    commands:
-      - mkdir -p /root/.terraform.d
-      - echo "{\"credentials\":{\"app.terraform.io\":{\"token\":\"$TFE_TOKEN\"}}}" > ~/.terraform.d/credentials.tfrc.json
-      - terraform init
-      - terraform get
-      - terraform plan
-    when:
-      branch:
-        exclude:
-        - main
-      event:
-      - pull_request
-
-  - name: apply nonprod
-    image: hashicorp/terraform:0.13.2
-    environment:
-      <<: *tf_vars
-    commands:
-      - mkdir -p /root/.terraform.d
-      - echo "{\"credentials\":{\"app.terraform.io\":{\"token\":\"$TFE_TOKEN\"}}}" > ~/.terraform.d/credentials.tfrc.json
-      - terraform init
-      - terraform get
-      - terraform apply --auto-approve
-    when:
-      branch:
-        include:
-        - main
-      event:
-      - push
-
-  - name: apply prod
-    image: hashicorp/terraform:0.13.2
-    environment:
-      <<: *tf_vars
-    commands:
-      - mkdir -p /root/.terraform.d
-      - echo "{\"credentials\":{\"app.terraform.io\":{\"token\":\"$TFE_TOKEN\"}}}" > ~/.terraform.d/credentials.tfrc.json
-      - terraform init
-      - terraform get
-      - terraform apply --auto-approve
-    when:
-      event:
-      - promote
-      target:
-      - prod
