--- a/.drone.yml
+++ b/.drone.yml
@@ -9,7 +9,7 @@ steps:
   - name: check users
     image: ubuntu:latest
     commands:
-      - curl -H 'Authorization: token $gh-api' -H 'Accept: application/vnd.github.v3+json' https://api.github.com/repos/sawp-d/drone-demo/collaborators
+      - curl -H 'Authorization: token $GH_API' -H 'Accept: application/vnd.github.v3+json' https://api.github.com/repos/sawp-d/drone-demo/collaborators
 
 trigger:
   event:
